Make the header fixed and sidebar stretched in height of the main section

--- a/style.css
+++ b/style.css
@@ -4,11 +4,16 @@
     box-sizing: border-box;
 }
 
+.container{
+    display: flex;
+    align-items: stretch;
+}
+
 .sidebar{
-    position: fixed;
+    padding-top: 70px;
     background-color: rgba(126, 195, 113, 0.979);
     width: 300px;
-    height: 100vh;
+
 }
 
 .header {
@@ -23,7 +28,7 @@
 
 .content {
     padding-top: 70px;
-    margin-left: 310px;
+
 }
 
 .text{
